--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "webhook-whatsapp",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.18.0"
   }
 }
